chore: Initial tidy up

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-template",
+  "name": "twitch-guild-wars-2-build-viewer",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Matthew Elphick <matt.a.elphy@gmail.com> (https://mael.tech)",
