--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "next build",
     "start": "next start",
     "prettier": "prettier --ignore-path .gitignore --write .",
-    "lint": "eslint --ext .ts,.tsx --ignore-path .gitignore"
+    "lint": "eslint --ext .ts,.tsx --ignore-path .gitignore",
+    "export": "next build && rm -r out extension.zip && next export && (cd out && zip -r ../extension.zip ./*)"
   },
   "husky": {
     "hooks": {
@@ -28,7 +29,8 @@
     "next": "^10.2.3",
     "next-seo": "^4.24.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-tooltip": "^4.2.21"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.4",
