--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "next-seo": "^4.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-tooltip": "^4.2.21"
+    "react-tippy": "^1.4.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.4",
