--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "prettier": "prettier --ignore-path .gitignore --write",
     "lint": "eslint --ext .ts,.tsx -c .eslintrc --ignore-path .gitignore",
     "export": "next build && rm -r out extension.zip && next export && (cd out && zip -r ../extension.zip ./*)",
-    "export-js": "npx esbuild src/mounts/panel.tsx  --bundle --outfile=output/panel.js && npx esbuild src/mounts/config.tsx  --bundle --outfile=output/config.js && rm -rf extension.zip && (cd output && zip -r ../extension.zip ./*)"
+    "export-js": "dotenv-extended node scripts/build.js && rm -rf extension.zip && (cd output && zip -r ../extension.zip ./*)"
   },
   "husky": {
     "hooks": {
@@ -26,6 +26,8 @@
     ]
   },
   "dependencies": {
+    "@sentry/react": "^6.8.0",
+    "@sentry/tracing": "^6.8.0",
     "fathom-client": "^3.0.0",
     "next": "^10.2.3",
     "next-seo": "^4.24.0",
@@ -40,6 +42,7 @@
     "@types/react": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
+    "dotenv-extended": "^2.9.0",
     "esbuild": "^0.12.6",
     "eslint": "^7.28.0",
     "eslint-config-prettier": "^8.3.0",
